[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/InteractiveConsole.tscn" type="PackedScene" id=1]
[ext_resource path="res://places/SpaceBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/ShipEditor.gd" type="Script" id=3]

[sub_resource type="Environment" id=1]
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.2

[node name="ShipEditor" type="Spatial"]
script = ExtResource( 3 )

[node name="SpaceBackground" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.125, 0, 0, 0, 0.125, 0, 0, 0, 0.125, 0, -10, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.621162, 0.258923, -0.739673, 0.0939634, 0.912428, 0.398304, 0.778029, -0.316914, 0.542436, 4.90081, 10.6671, 9.82405 )
light_indirect_energy = 0.0
light_cull_mask = 4293918721
shadow_enabled = true
shadow_contact = 0.1
directional_shadow_normal_bias = 0.0

[node name="Red" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 500, 0 )
layers = 2147483656
light_color = Color( 0.996078, 0.278431, 0.137255, 1 )
light_energy = 3.0
light_cull_mask = 4293918728
shadow_color = Color( 1, 0, 0, 1 )
omni_range = 1000.0
omni_attenuation = 0.017337
omni_shadow_mode = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1.62921e-07, 1, 1.62921e-07, 0, -1.62921e-07, 1, 1, 1.62921e-07, 2.65431e-14, 0, 30, 0 )
projection = 1
current = true
size = 10.0

[node name="MountPoints" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 0 )

[node name="Available" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12, 0 )

[node name="Installed" type="Spatial" parent="."]

[node name="ConsolePanel" parent="." instance=ExtResource( 1 )]
hostname = "shipyard"
initial_bbcode = "Hunter AI activated. Host mind control complete. Enter commands.{eoln}Message received: [i]\"Welcome to the shipyard. What can we sell you today?\"[/i]"

[node name="ShipInfo" parent="." instance=ExtResource( 1 )]
initial_bbcode = "[ref=races/humans]test text[/ref]"
follow_urls = false
allow_input = false
[connection signal="url_clicked" from="ShipInfo" to="ConsolePanel" method="process_command"]
